Change Google Widget Display

--- a/app/views/dashing/widgets/google.html
+++ b/app/views/dashing/widgets/google.html
@@ -1,9 +1,12 @@
 <h1 class="title" data-bind="title"></h1>
 
 <h2 class="value" data-bind="current | shortenedNumber | prepend prefix | append suffix"></h2>
+<p class="change-rate">
+    Visitors This Month
+</p>
 
 <p class="change-rate">
-  <i data-bind-class="arrow"></i><span data-bind="difference"></span>
+  <i data-bind-class="arrow"></i><h3 data-bind="difference"></h3>
 </p>
 
 <p class="more-info" data-bind="moreinfo"></p>
